# ai-scene-director

./: AI_EXPORT_GUIDE.md  BETA_STATUS.md  BROWSER_SMOKE.json  FIELD_TEST_GUIDE.md  GITHUB_UPLOAD.md  PRODUCT_DEFINITION.md  PRODUCT_FLOW.md  PROMOTION_PLAN.json  RC_STATUS.md  README.md  RELEASE_ACCEPTANCE.md  RELEASE_EVIDENCE.md  RELEASE_EVIDENCE_MANIFEST.json  RELEASE_GATE.json  RELEASE_READINESS.json  UI_EXPORT_DIALOG_FIX.md  UI_EXPORT_GUIDE_ENTRY_FIX.md  UI_EXPORT_HANDOFF_FIX.md  UI_MAIN_TYPOGRAPHY.md  UI_OVERLAP_FIX.md  UI_POLISH.md  USABILITY_CHECK.md  VERCEL_DEPLOY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
public/fixtures/: humanoid-smoke.glb
scripts/: browser-smoke.mjs  check-desktop.mjs  generate-rig-fixtures.mjs  native-artifact-check.mjs  native-runtime-smoke.mjs  promote-release.mjs  release-gate.mjs  release-identity.mjs  release-preflight.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AIExportDialog.tsx  AIExportGuidePage.tsx  AppErrorBoundary.tsx  AssetLibraryPanel.tsx  ComfyPanel.tsx  CommandPalette.tsx  DirectorWorkflowPanel.tsx  Onboarding.tsx  ProjectDoctorPanel.tsx  SceneGeneratorPanel.tsx  SessionInsightsPanel.tsx  ShotExportReview.tsx  Viewport.tsx
src/domain/: actions.ts  assetStorage.ts  assets.ts  comfyui.ts  commandPalette.ts  desktopBridge.ts  directorWorkflow.ts  (+27 more)
tests/: domain.test.ts
(+1 files in other folders)
